# R2Bot

./: README.md
articubot_one/config/: my_controllers.yaml
articubot_one/description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
articubot_one/launch/: launch_robot.launch.py  launch_sim.launch.py
autonomy_package/: package.xml  setup.cfg  setup.py
autonomy_package/autonomy_package/: ball_mover_node.py  move_to_ball_node.py
autonomy_package/launch/: launch_robot_with_autonomy.launch.py
diffdrive_arduino/controllers/: robot_controller_example.yaml
diffdrive_arduino/src/: diffdrive_arduino.cpp
mpu6886_node/: package.xml  setup.cfg  setup.py
mpu6886_node/launch/: mpu6886_launch.py
mpu6886_node/mpu6886_node/: mpu6886.py
mpu6886_node/rviz/: IMU.rviz
yolov8_ros/yolo_msgs/: CMakeLists.txt  package.xml
yolov8_ros/yolo_msgs/msg/: Detection.msg  Detections.msg
yolov8_ros/yolo_ros/: package.xml  setup.cfg  setup.py
yolov8_ros/yolo_ros/yolo_ros/: yolo_node.py
